--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "lib/cmt"]
-	path = lib/cmt
+[submodule "deps/cmt"]
+	path = deps/cmt
 	url = https://github.com/recp/cmt.git
-[submodule "lib/cglm"]
-	path = lib/cglm
-	url = https://github.com/recp/cglm.git
