--- a/win/gpu/gpu.vcxproj
+++ b/win/gpu/gpu.vcxproj
@@ -212,10 +212,12 @@
     <ClInclude Include="..\..\include\gpu\api\device.h" />
     <ClInclude Include="..\..\include\gpu\api\frame.h" />
     <ClInclude Include="..\..\include\gpu\api\gpudef.h" />
+    <ClInclude Include="..\..\include\gpu\api\instance.h" />
     <ClInclude Include="..\..\include\gpu\api\library.h" />
     <ClInclude Include="..\..\include\gpu\api\pass.h" />
     <ClInclude Include="..\..\include\gpu\api\rce.h" />
     <ClInclude Include="..\..\include\gpu\api\render-pipeline.h" />
+    <ClInclude Include="..\..\include\gpu\api\sampler.h" />
     <ClInclude Include="..\..\include\gpu\api\swapchain.h" />
     <ClInclude Include="..\..\include\gpu\api\vertex.h" />
     <ClInclude Include="..\..\include\gpu\buffer.h" />
@@ -228,12 +230,14 @@
     <ClInclude Include="..\..\include\gpu\feature.h" />
     <ClInclude Include="..\..\include\gpu\frame.h" />
     <ClInclude Include="..\..\include\gpu\gpu.h" />
+    <ClInclude Include="..\..\include\gpu\instance.h" />
     <ClInclude Include="..\..\include\gpu\library.h" />
     <ClInclude Include="..\..\include\gpu\metalkit.h" />
     <ClInclude Include="..\..\include\gpu\pass.h" />
     <ClInclude Include="..\..\include\gpu\pipeline.h" />
     <ClInclude Include="..\..\include\gpu\pixelformat.h" />
     <ClInclude Include="..\..\include\gpu\resource.h" />
+    <ClInclude Include="..\..\include\gpu\sampler.h" />
     <ClInclude Include="..\..\include\gpu\stage-io.h" />
     <ClInclude Include="..\..\include\gpu\swapchain.h" />
     <ClInclude Include="..\..\include\gpu\texture.h" />
@@ -252,10 +256,12 @@
     <ClCompile Include="..\..\src\api\descr\descriptor.c" />
     <ClCompile Include="..\..\src\api\device.c" />
     <ClCompile Include="..\..\src\api\frame.c" />
+    <ClCompile Include="..\..\src\api\instance.c" />
     <ClCompile Include="..\..\src\api\library.c" />
     <ClCompile Include="..\..\src\api\pass\renderpass.c" />
     <ClCompile Include="..\..\src\api\render\pipeline.c" />
     <ClCompile Include="..\..\src\api\render\rce.c" />
+    <ClCompile Include="..\..\src\api\sampler.c" />
     <ClCompile Include="..\..\src\api\swapchain.c" />
     <ClCompile Include="..\..\src\api\vertex.c" />
     <ClCompile Include="..\..\src\backend\backend.c" />
@@ -263,7 +269,9 @@
     <ClCompile Include="..\..\src\backend\dx12\impl\descr\descpool.c" />
     <ClCompile Include="..\..\src\backend\dx12\impl\device.c" />
     <ClCompile Include="..\..\src\backend\dx12\impl\frame.c" />
+    <ClCompile Include="..\..\src\backend\dx12\impl\instance.c" />
     <ClCompile Include="..\..\src\backend\dx12\impl\renderpass.c" />
+    <ClCompile Include="..\..\src\backend\dx12\impl\sampler.c" />
     <ClCompile Include="..\..\src\backend\dx12\impl\swapchain.c" />
     <ClCompile Include="..\..\src\backend\dx12\init.c" />
     <ClCompile Include="..\..\src\init.c" />
